# ai-on-eks

infra/solutions/cost_effective_scalable_inference_agentic_ai_automode/agentic-apps/strandsdk_agentic_rag_opensearch/: Dockerfile.main  Dockerfile.mcp  README.md  build-images.sh  cleanup-opensearch.sh  deploy-opensearch.sh  healthcheck-main.sh  healthcheck-mcp.sh  opensearch-cluster-simple.yaml  pyproject.toml  requirements.txt  run_main_clean.py  run_single_query_clean.py  setup.sh  setup_opensearch_index.py  startup-main.sh  startup-mcp.sh  update-k8s-config.sh  update_k8s_config.py
infra/solutions/cost_effective_scalable_inference_agentic_ai_automode/agentic-apps/strandsdk_agentic_rag_opensearch/k8s/: configmap.yaml  main-app-deployment.yaml  service-account.yaml  tavily-mcp-deployment.yaml
infra/solutions/cost_effective_scalable_inference_agentic_ai_automode/agentic-apps/strandsdk_agentic_rag_opensearch/knowledge/: q_c_data.csv
infra/solutions/cost_effective_scalable_inference_agentic_ai_automode/agentic-apps/strandsdk_agentic_rag_opensearch/scripts/: start_tavily_server.py
infra/solutions/cost_effective_scalable_inference_agentic_ai_automode/agentic-apps/strandsdk_agentic_rag_opensearch/src/: config.py  main.py  mcp_server_standalone.py  server.py  test_agents.py  test_web_search_integration.py
infra/solutions/cost_effective_scalable_inference_agentic_ai_automode/agentic-apps/strandsdk_agentic_rag_opensearch/src/agents/: __init__.py  knowledge_agent.py  mcp_agent.py  rag_agent.py  supervisor_agent copy.py  supervisor_agent.py  supervisor_agent.py.backup
infra/solutions/cost_effective_scalable_inference_agentic_ai_automode/agentic-apps/strandsdk_agentic_rag_opensearch/src/mcp_servers/: mcp_filesystem_server.py  tavily_search_server.py
infra/solutions/cost_effective_scalable_inference_agentic_ai_automode/agentic-apps/strandsdk_agentic_rag_opensearch/src/scripts/: embed_knowledge.py
(+109 files in other folders)
