[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strandsdk-agentic-rag-opensearch"
version = "1.0.0"
description = "Multi-Agent RAG system with MCP and OpenSearch using Strands SDK"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "strands-agents>=0.1.0",
    "strands-tools>=0.1.0",
    "openai>=1.0.0",
    "mcp>=1.0.0",
    "fastmcp>=0.9.0",
    "boto3>=1.34.0",
    "opensearch-py>=2.4.0",
    "aws-requests-auth>=0.4.3",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "langfuse>=2.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
embed-knowledge = "src.scripts.embed_knowledge:main"
run-agents = "src.main:main"
test-agents = "src.test_agents:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
